Proyecto2/k8s/grpc_client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-go
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-client-go
  template:
    metadata:
      labels:
        app: grpc-client-go
    spec:
      containers:
        - name: grpc-client-go
          image: elianreyes/go_client_grpc_sop1:0.3
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-client-service
  namespace: sopes1
spec:
  selector:
    app: grpc-client-go
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
