Proyecto2/k8s/grpc_server_kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-go
  namespace: sopes1
spec:
  selector:
    matchLabels:
      app: grpc-server-go
  template:
    metadata:
      labels:
        app: grpc-server-go
    spec:
      containers:
        - name: grpc-server-go
          image: elianreyes/go_server_grpc_sop1:0.2
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: grpc-server-service-kafka
  namespace: sopes1
spec:
  selector:
    app: grpc-server-go
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
