Proyecto2/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: redis
  name: redis
  namespace: sopes1
spec:
  replicas: 2
  selector:
    matchLabels:
      run: redis
  template:
    metadata:
      labels:
        run: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2
          command:
            - redis-server
            - /redisconf/redis.conf
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /redisconf
              name: config
      volumes:
        - name: config
          configMap:
            name: redis-configmap
            items:
              - key: redis-config
                path: redis.conf

---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: redis
  name: redis
  namespace: sopes1
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    run: redis
  type: ClusterIP
