Proyecto2/k8s/rust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-rust
  namespace: sopes1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-rust
  template:
    metadata:
      labels:
        app: api-rust
    spec:
      containers:
        - name: api-rust
          image: elianreyes/api-rust:0.1
          ports:
            - containerPort: 8081
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: api-rust
  namespace: sopes1
spec:
  selector:
    app: api-rust
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
